# Hack_2GIS

./: .env  .gitignore  README.md  pyproject.toml
backend/: .env  main.py  pyproject.toml
backend/app/api/: stt_route.py  user_location.py
backend/app/api/v1/: schemas.py  stt_route.py  stt_route_tourist.py
backend/app/api/v1/stt/: schemas.py  stt_route.py
backend/app/repository/: __init__.py
backend/app/services/: geocoding.py  geocoding_tourist.py  routing.py  stt.py
backend/app/settings/: config.py
frontend/: .env  index.html  package.json
frontend/src/: App.jsx  Map.jsx  MapContext.jsx  MapWrapper.jsx  style.css
route_planner_agent/: .env  README.md  pyproject.toml
route_planner_agent/src/route_planner_agent/: crew.py  main.py  models.py
route_planner_agent/src/route_planner_agent/config/: agents.yaml  tasks.yaml
route_planner_agent/src/route_planner_agent/llms/: yandex.py
tourist_route_planner/: README.md  pyproject.toml
tourist_route_planner/src/tourist_route_planner/: crew.py  main.py  models.py
tourist_route_planner/src/tourist_route_planner/config/: agents.yaml  tasks.yaml
