[project]
name = "route_planner_agent"
version = "0.1.0"
description = "route-planner-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",
    "openai>=1.109.1",
    "requests>=2.32.5",
]

[project.scripts]
route_planner_agent = "route_planner_agent.main:run"
run_crew = "route_planner_agent.main:run"
train = "route_planner_agent.main:train"
replay = "route_planner_agent.main:replay"
test = "route_planner_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
