[project]
name = "tourist_route_planner"
version = "0.1.0"
description = "tourist-route-planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
tourist_route_planner = "tourist_route_planner.main:run"
run_crew = "tourist_route_planner.main:run"
train = "tourist_route_planner.main:train"
replay = "tourist_route_planner.main:replay"
test = "tourist_route_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
